<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.1</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.hari</groupId>
	<artifactId>DriverShipments</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>DriverShipments</name>
	<description>Map drivers to shipments</description>
	<properties>
		<java.version>17</java.version>
		<plugin.prettier.goal>write</plugin.prettier.goal>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
	            <groupId>org.jacoco</groupId>
	            <artifactId>jacoco-maven-plugin</artifactId>
	            <version>0.8.8</version>
	            <executions>
	                <execution>
	                    <id>default-prepare-agent</id>
	                    <goals>
	                        <goal>prepare-agent</goal>
	                    </goals>
	                </execution>
	                <execution>
	                    <id>default-report</id>
	                    <phase>prepare-package</phase>
	                    <goals>
	                        <goal>report</goal>
	                    </goals>
	                </execution>
	            </executions>
	        </plugin>
	        <plugin>
		      <groupId>com.hubspot.maven.plugins</groupId>
		      <artifactId>prettier-maven-plugin</artifactId>
		      <version>0.16</version>
		      <configuration>
		        <prettierJavaVersion>1.5.0</prettierJavaVersion>
		        <printWidth>90</printWidth>
		        <tabWidth>2</tabWidth>
		        <useTabs>false</useTabs>
		        <ignoreConfigFile>true</ignoreConfigFile>
		        <ignoreEditorConfig>true</ignoreEditorConfig>
		        <!-- Use <inputGlobs> to override the default input patterns -->
		        <inputGlobs>
		          <!-- These are the default patterns, you can omit <inputGlobs> entirely unless you want to override them -->
		          <inputGlob>src/main/java/**/*.java</inputGlob>
		          <inputGlob>src/test/java/**/*.java</inputGlob>
		        </inputGlobs>
		      </configuration>
		      <executions>
		        <execution>
		          <phase>validate</phase>
		          <goals>
		            <goal>${plugin.prettier.goal}</goal>
		          </goals>
		        </execution>
		      </executions>
		    </plugin>
		</plugins>
	</build>

</project>
